[package]
name = "hadrone-core"
version = "0.1.1"
edition = "2024"
description = "Core layout engine: compaction, collisions, and layout validation"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/wesleybatista/hadrone"
homepage = "https://github.com/wesleybatista/hadrone"
documentation = "https://docs.rs/hadrone-core"
keywords = ["layout", "grid", "dnd", "wasm"]
categories = ["rendering", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.4"
