[package]
name = "hadrone-dioxus"
version = "0.1.0"
edition = "2024"
description = "Dioxus 0.7 bindings for hadrone grid layout engine"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/wesleybatista/hadrone"
documentation = "https://docs.rs/hadrone-dioxus"
keywords = ["dioxus", "grid", "layout"]
categories = ["rendering", "web-programming"]

[dependencies]
dioxus = { workspace = true, features = ["html"] }
hadrone-core = { path = "../hadrone-core" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
hadrone-extras = { path = "../hadrone-extras", features = ["dioxus"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Element",
    "ResizeObserver",
    "ResizeObserverEntry",
] }

[features]
default = []
desktop = ["dioxus/desktop"]
