[package]
name = "hadrone-extras"
version = "0.1.0"
edition = "2024"
description = "Extra adapters and storage helpers for hadrone"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/wesleybatista/hadrone"
documentation = "https://docs.rs/hadrone-extras"
keywords = ["storage", "breakpoints", "layout"]
categories = ["development-tools"]

[dependencies]
hadrone-core = { path = "../hadrone-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dioxus = { workspace = true, optional = true }

[features]
default = []
dioxus = ["dep:dioxus"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "PointerEvent",
    "Element",
    "ResizeObserver",
    "ResizeObserverEntry",
    "DomRectReadOnly",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
