[package]
name = "hadrone-leptos"
version = "0.1.0"
edition = "2021"
description = "Leptos bindings for hadrone grid layout engine"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/wesleybatista/hadrone"
documentation = "https://docs.rs/hadrone-leptos"
keywords = ["leptos", "grid", "layout"]
categories = ["rendering", "web-programming"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
hadrone-core = { workspace = true }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
] }
