[package]
name = "hadrone-wasm"
version = "0.1.1"
edition = "2021"
description = "WASM bindings for hadrone engine (JS interop)"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/wesleybatista/hadrone"
documentation = "https://docs.rs/hadrone-wasm"
keywords = ["wasm", "wasm-bindgen", "layout"]
categories = ["wasm", "rendering"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
hadrone-core = { workspace = true }
